--- a/index.html
+++ b/index.html
@@ -2,48 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>nmarkly - Remove Sora AI Watermarks & Download Videos Free</title>
-    <meta name="description" content="nmarkly: Free Sora AI watermark remover. Download Sora videos without watermarks in HD quality. No login required, 100% free forever." />
-    <meta name="keywords" content="nmarkly, sora ai, sora watermark remover, sora ai video, remove watermark, sora video downloader, sora ai tool, download sora videos, sora ai free, openai sora" />
-    <meta name="author" content="nmarkly" />
+    <title>Sora AI Video Generator - Free Sora AI Watermark Remover & Video Downloader</title>
+    <meta name="description" content="Free Sora AI video generator and watermark remover. Download Sora AI videos without watermarks in HD quality. Sora AI text to video tool - no login required, 100% free forever." />
+    <meta name="keywords" content="sora ai, sora ai video generator, sora ai video, sora ai login, sora ai video maker, sora ai generator, sora ai tool, sora ai text to video, ai video generator sora, sora ai video free, sora ai free video generator, open ai sora, sora ai alternatives, sora ai video creator, text to video ai sora, openai sora, sora video generator ai" />
+    <meta name="author" content="Sora Watermark Remover" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
-    <link rel="canonical" href="https://nmarkly.com/" />
+    <link rel="canonical" href="https://yourdomain.com/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="nmarkly - Free Sora AI Watermark Remover & Video Downloader" />
-    <meta property="og:description" content="Remove watermarks from Sora AI videos and download in HD quality. Free, fast, and no login required." />
-    <meta property="og:url" content="https://nmarkly.com/" />
-    <meta property="og:site_name" content="nmarkly" />
-    <meta property="og:image" content="https://nmarkly.com/og-image.jpg" />
+    <meta property="og:title" content="Sora AI Video Generator - Free Sora AI Tool & Watermark Remover" />
+    <meta property="og:description" content="Free Sora AI video generator and watermark remover. Download Sora AI videos in HD quality without watermarks. No login or signup required." />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:site_name" content="Sora Watermark Remover" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="en_US" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="nmarkly - Free Sora AI Watermark Remover" />
-    <meta name="twitter:description" content="Remove watermarks from Sora AI videos and download in HD quality. Free and no login required." />
-    <meta name="twitter:image" content="https://nmarkly.com/twitter-image.jpg" />
+    <meta name="twitter:title" content="Sora AI Video Generator - Free Sora AI Tool & Watermark Remover" />
+    <meta name="twitter:description" content="Free Sora AI video generator and watermark remover. Download Sora AI videos in HD quality without watermarks or login." />
+    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
+    <meta name="twitter:site" content="@yourhandle" />
+    <meta name="twitter:creator" content="@yourhandle" />
 
     <meta name="theme-color" content="#0f172a" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="nmarkly" />
+    <meta name="apple-mobile-web-app-title" content="Sora Remover" />
 
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "nmarkly",
-      "alternateName": "Sora AI Watermark Remover",
-      "description": "Free tool to remove watermarks from Sora AI videos and download them in HD quality. No signup or login required. Fast, secure, and completely free.",
-      "url": "https://nmarkly.com/",
+      "name": "Sora AI Video Generator",
+      "description": "Free Sora AI video generator and watermark remover tool. Download Sora AI videos in HD quality without watermarks. Best alternative to OpenAI Sora with no login required.",
+      "url": "https://yourdomain.com/",
       "applicationCategory": "MultimediaApplication",
       "operatingSystem": "Any",
       "offers": {
@@ -52,17 +50,16 @@
         "priceCurrency": "USD"
       },
       "featureList": [
-        "Instant watermark removal from Sora AI videos",
+        "Instant watermark removal",
         "HD quality video download",
-        "No signup or login required",
-        "100% free forever",
-        "Multiple video quality options",
-        "Secure and private processing"
+        "No signup required",
+        "Free forever",
+        "Multiple video quality options"
       ],
       "aggregateRating": {
         "@type": "AggregateRating",
-        "ratingValue": "4.9",
-        "ratingCount": "2341",
+        "ratingValue": "4.8",
+        "ratingCount": "1247",
         "bestRating": "5",
         "worstRating": "1"
       }
