--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sora AI Video Generator - Free Sora AI Watermark Remover & Video Downloader</title>
-    <meta name="description" content="Free Sora AI video generator and watermark remover. Download Sora AI videos without watermarks in HD quality. Sora AI text to video tool - no login required, 100% free forever." />
+    <title>Unmarkly - Free Sora AI Watermark Remover & Video Downloader</title>
+    <meta name="description" content="Unmarkly - Free Sora AI video watermark remover. Download Sora AI videos without watermarks in HD quality. No login required, 100% free forever." />
     <meta name="keywords" content="sora ai, sora ai video generator, sora ai video, sora ai login, sora ai video maker, sora ai generator, sora ai tool, sora ai text to video, ai video generator sora, sora ai video free, sora ai free video generator, open ai sora, sora ai alternatives, sora ai video creator, text to video ai sora, openai sora, sora video generator ai" />
-    <meta name="author" content="Sora Watermark Remover" />
+    <meta name="author" content="Unmarkly" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <link rel="canonical" href="https://yourdomain.com/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Sora AI Video Generator - Free Sora AI Tool & Watermark Remover" />
-    <meta property="og:description" content="Free Sora AI video generator and watermark remover. Download Sora AI videos in HD quality without watermarks. No login or signup required." />
+    <meta property="og:title" content="Unmarkly - Free Sora AI Watermark Remover" />
+    <meta property="og:description" content="Unmarkly - Free Sora AI video watermark remover. Download Sora AI videos in HD quality without watermarks. No login or signup required." />
     <meta property="og:url" content="https://yourdomain.com/" />
-    <meta property="og:site_name" content="Sora Watermark Remover" />
+    <meta property="og:site_name" content="Unmarkly" />
     <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="en_US" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Sora AI Video Generator - Free Sora AI Tool & Watermark Remover" />
-    <meta name="twitter:description" content="Free Sora AI video generator and watermark remover. Download Sora AI videos in HD quality without watermarks or login." />
+    <meta name="twitter:title" content="Unmarkly - Free Sora AI Watermark Remover" />
+    <meta name="twitter:description" content="Unmarkly - Free Sora AI video watermark remover. Download Sora AI videos in HD quality without watermarks or login." />
     <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
     <meta name="twitter:site" content="@yourhandle" />
     <meta name="twitter:creator" content="@yourhandle" />
@@ -33,14 +33,14 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Sora Remover" />
+    <meta name="apple-mobile-web-app-title" content="Unmarkly" />
 
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "Sora AI Video Generator",
-      "description": "Free Sora AI video generator and watermark remover tool. Download Sora AI videos in HD quality without watermarks. Best alternative to OpenAI Sora with no login required.",
+      "name": "Unmarkly",
+      "description": "Free Sora AI video watermark remover tool. Download Sora AI videos in HD quality without watermarks. No login required.",
       "url": "https://yourdomain.com/",
       "applicationCategory": "MultimediaApplication",
       "operatingSystem": "Any",
