--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="sora ai, sora ai video generator, sora ai video, sora ai login, sora ai video maker, sora ai generator, sora ai tool, sora ai text to video, ai video generator sora, sora ai video free, sora ai free video generator, open ai sora, sora ai alternatives, sora ai video creator, text to video ai sora, openai sora, sora video generator ai" />
     <meta name="author" content="Unmarkly" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
-    <link rel="canonical" href="https://yourdomain.com/" />
+    <link rel="canonical" href="https://unmarkly.com/" />
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Unmarkly - Free Sora AI Watermark Remover" />
     <meta property="og:description" content="Unmarkly - Free Sora AI video watermark remover. Download Sora AI videos in HD quality without watermarks. No login or signup required." />
-    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:url" content="https://unmarkly.com/" />
     <meta property="og:site_name" content="Unmarkly" />
-    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+    <meta property="og:image" content="https://unmarkly.com/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="en_US" />
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Unmarkly - Free Sora AI Watermark Remover" />
     <meta name="twitter:description" content="Unmarkly - Free Sora AI video watermark remover. Download Sora AI videos in HD quality without watermarks or login." />
-    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
+    <meta name="twitter:image" content="https://unmarkly.com/twitter-image.jpg" />
     <meta name="twitter:site" content="@yourhandle" />
     <meta name="twitter:creator" content="@yourhandle" />
 
@@ -41,7 +41,7 @@
       "@type": "WebApplication",
       "name": "Unmarkly",
       "description": "Free Sora AI video watermark remover tool. Download Sora AI videos in HD quality without watermarks. No login required.",
-      "url": "https://yourdomain.com/",
+      "url": "https://unmarkly.com/",
       "applicationCategory": "MultimediaApplication",
       "operatingSystem": "Any",
       "offers": {
